dynamic-enum: updated to java 11 and spring boot 2.2 version