@@ -1,26 +1,43 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '1.5.6.RELEASE'
+    id 'org.springframework.boot' version '2.2.2.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 }
 
 group = 'com.fedorizvekov'
 version = '1.0.0-SNAPSHOT'
 description = 'Reflection experiment'
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 jar {
     manifest {
         attributes 'Main-Class': 'com.fedorizvekov.dynamic.enum.DynamicEnumApplication'
     }
+}
+
+compileJava {
+    options.compilerArgs << "--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED"
+}
+
+test {
+    doFirst {
+        jvmArgs += ["--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED"]
+        jvmArgs += ["--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"]
+    }
+    useJUnitPlatform()
 }
